# montoux_athena

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/: .installation.rst.swp  athena.rst  conf.py  index.rst  installation.rst
src/: athena.py
src/montoux_athena/: __init__.py  athena.py
test/: test_basic.py
