[metadata]
name=montoux_athena
version=0.2
url=https://git.montoux.com/sandpit/montoux_athena
description=Montoux Athena
long_description=file: README.md
long_description_content_type=text/markdown

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

